// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Icon Custom only 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Custom only
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          <hr
            style={
              Object {
                "backgroundColor": "#ccd6dd",
                "border": "none",
                "height": 1,
              }
            }
          />
          <span
            style={
              Object {
                "color": "#898d97",
                "fontSize": 16,
                "marginBottom": 20,
                "marginTop": 0,
              }
            }
          >
            <div>
              <p>
                In edge cases you can customize your Icon with own CSS styles.
              </p>
            </div>
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              <h3
                style={
                  Object {
                    "color": "#363a45",
                    "fontSize": 18,
                    "marginBottom": 10,
                  }
                }
              >
                Icon example
              </h3>
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <svg
            fill="currentColor"
            height={50}
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": "#FF0000",
                "paddingTop": "20px",
                "transform": "rotate(90, 16, 16)",
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 24 24"
            width={50}
          >
            <path
              d="M19 7h-8v7H3V5H1v15h2v-3h18v3h2v-9a4 4 0 0 0-4-4zM7 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
            />
          </svg>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Accomodation
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          size
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                50
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          color
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              #FF0000
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          style
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  transform
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  rotate(90, 16, 16)
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  paddingTop
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  20px
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon Predefined and custom 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Predefined and custom
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          <hr
            style={
              Object {
                "backgroundColor": "#ccd6dd",
                "border": "none",
                "height": 1,
              }
            }
          />
          <span
            style={
              Object {
                "color": "#898d97",
                "fontSize": 16,
                "marginBottom": 20,
                "marginTop": 0,
              }
            }
          >
            <div>
              <p>
                In edge cases you can customize your Icon with own CSS styles.
              </p>
            </div>
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              <h3
                style={
                  Object {
                    "color": "#363a45",
                    "fontSize": 18,
                    "marginBottom": 10,
                  }
                }
              >
                Icon example
              </h3>
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <svg
            fill="currentColor"
            height="24px"
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": "#46515e",
                "paddingTop": "20px",
                "transform": "rotate(90, 16, 16)",
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M19 7h-8v7H3V5H1v15h2v-3h18v3h2v-9a4 4 0 0 0-4-4zM7 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
            />
          </svg>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Accomodation
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          size
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              medium
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          color
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              primary
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          style
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  transform
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  rotate(90, 16, 16)
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  paddingTop
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  20px
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon Predefined only 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Predefined only
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this Icon component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          <hr
            style={
              Object {
                "backgroundColor": "#ccd6dd",
                "border": "none",
                "height": 1,
              }
            }
          />
          <span
            style={
              Object {
                "color": "#898d97",
                "fontSize": 16,
                "marginBottom": 20,
                "marginTop": 0,
              }
            }
          >
            <div>
              <p>
                All icons in Orbit components are using size and color prop. If it’s possible for you to use predefined sizes and colors, use it.
              </p>
            </div>
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              <h3
                style={
                  Object {
                    "color": "#363a45",
                    "fontSize": 18,
                    "marginBottom": 10,
                  }
                }
              >
                Icon example
              </h3>
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <svg
            fill="currentColor"
            height="24px"
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": "#46515e",
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M19 7h-8v7H3V5H1v15h2v-3h18v3h2v-9a4 4 0 0 0-4-4zM7 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
            />
          </svg>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Accomodation
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          size
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              medium
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          color
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              primary
                              "
                            </span>
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
